[workspace]
members = [
    "p2016_19",
    "p2016_18",
    "p2015_25",
    "p2015_24",
    "p2015_23",
    "p2015_22",
    "p2015_21",
    "p2015_20",
    "p2015_19",
    "p2015_18",
    "p2015_17",
    "p2015_16",
    "p2015_15",
    "p2015_14",
    "p2015_13",
    "p2015_12",
    "p2015_11",
    "p2015_10",
    "p2015_09",
    "p2015_08",
    "p2015_07",
    "p2015_06",
    "p2015_05",
    "p2015_04",
    "p2015_03",
    "p2015_02",
    "p2020_25",
    "p2020_24",
    "p2020_23",
    "p2020_22",
    "p2020_21",
    "p2020_20",
    "p2020_19",
    "p2020_18",
    "p2020_17",
    "p2020_16",
    "p2020_15",
    "p2020_14",
    "p2020_13",
    "p2020_12",
    "p2020_11",
    "p2020_10",
    "p2020_09",
    "p2020_08",
    "p2020_07",
    "p2020_06",
    "p2020_05",
    "p2020_04",
    "p2020_03",
    "p2020_02",
    "p2020_01",
    "p2015_01",
    "p2016_17",
    "p2016_16",
    "p2016_15",
    "p2016_14",
    "p20xx_template",
    "p2016_13",
    "p2016_12",
    "p2016_11",
    "p2016_10",
    "p2016_09",
    "p2016_08",
    "p2016_07",
    "p2016_06",
    "p2016_05",
    "p2016_04",
    "p2016_03",
    "p2016_02",
    "p2016_01",
    "p2018_01",
    "p2018_02",
    "p2018_03",
    "p2018_04",
    "p2018_05",
    "p2018_06",
    "p2018_07",
    "p2018_08",
    "p2018_09",
    "p2018_10",
    "p2018_11",
    "p2018_12",
    "p2018_13",
    "p2018_14",
    "p2018_15",
    "p2018_16",
    "p2018_17",
    "p2018_18",
    "p2018_19",
    "p2018_20",
    "p2018_21",
    "p2018_22",
    "p2018_23",
    "p2018_24",
    "p2018_25",
    "p2019_01",
    "p2019_02",
    "p2019_03",
    "p2019_04",
    "p2019_05",
    "p2019_06",
    "p2019_07",
    "p2019_08",
    "p2019_09",
    "p2019_10",
    "p2019_11",
    "p2019_12",
    "p2019_13",
    "p2019_14",
    "p2019_15",
    "p2019_16",
    "p2019_17",
    "p2019_18",
    "p2019_19",
    "p2019_20",
    "p2019_21",
    "p2019_22",
    "p2019_23",
    "p2019_24a",
    "p2019_24b",
    "p2019_25"
]
